--- a/angular-site/src/app/editor-canvas.component.scss
+++ b/angular-site/src/app/editor-canvas.component.scss
@@ -2,7 +2,7 @@
 .canvas-with-scrollbars {
   position: relative;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 16px;
   grid-template-rows: 1fr 16px;
   gap: 2px;
   width: 100%;
@@ -32,6 +32,24 @@
     border-radius: 4px;
     border: none;
     cursor: pointer;
+  }
+}
+
+.canvas-scrollbar--vert {
+  grid-column: 2;
+  grid-row: 1;
+  width: 14px;
+  align-self: stretch;
+  writing-mode: vertical-rl;
+
+  &::-webkit-slider-thumb {
+    width: 12px;
+    height: 32px;
+  }
+
+  &::-moz-range-thumb {
+    width: 12px;
+    height: 32px;
   }
 }
 
